--- a/hbd_task_status/views/templates.xml
+++ b/hbd_task_status/views/templates.xml
@@ -1,16 +1,18 @@
 <openerp>
     <data>
+        <template id="assets_frontend" inherit_id="website.assets_frontend" name="Tasks">
+            <xpath expr="//script[last()]" position="after">
+                <script src="https://code.jquery.com/ui/1.7.0/jquery-ui.js" integrity="sha256-lFwjzFKbz615phhiQ5GGWa7hBVDBUXiHeD2o1M8Zg4U=" crossorigin="anonymous"></script>
+                <script type="text/javascript" src="/hbd_task_status/static/src/js/task.js"></script>
+            </xpath>
+        </template>
         <template id="tasks" name="Tasks">
             <t t-call="website.layout">
                 <div itemscope="itemscope" itemtype="http://schema.org/Product" id="wrap" class="js_task_list">
-                    <section t-attf-class="container mt8 oe_website_sale">
+                    <section t-attf-class="container mt32  mb32 oe_website_sale">
                         <div class="row">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            <ol class="sub">
+                            </ol>
                         </div>
                     </section>
                 </div>
